@@ -1,14 +1,15 @@
 package com.smartfarmer.ai.security;
 
+import com.smartfarmer.ai.common.enums.UserStatus;
 import com.smartfarmer.ai.user.entity.User;
 import com.smartfarmer.ai.user.repository.UserRepository;
+import java.util.Locale;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.stream.Collectors;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -20,15 +21,18 @@ public class CustomUserDetailsService implements UserDetailsService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
-        return new org.springframework.security.core.userdetails.User(
-                user.getEmail(),
-                user.getPasswordHash(),
-                user.getRoles().stream()
+        User user = userRepository.findByEmail(email.toLowerCase(Locale.ROOT))
+                .orElseThrow(() -> new UsernameNotFoundException("Invalid email or password"));
+        return org.springframework.security.core.userdetails.User.builder()
+                .username(user.getEmail())
+                .password(user.getPasswordHash())
+                .authorities(user.getRoles().stream()
                         .map(role -> new SimpleGrantedAuthority(role.getName().name()))
-                        .collect(Collectors.toList())
-        );
+                        .toList())
+                .disabled(user.getStatus() != UserStatus.ACTIVE)
+                .accountLocked(user.getStatus() == UserStatus.SUSPENDED)
+                .build();
     }
 }
